--- a/src/app/routes/home/home-publications/home-publications.component.html
+++ b/src/app/routes/home/home-publications/home-publications.component.html
@@ -1,39 +1,72 @@
 <div class="posts">
-  <div class="post" *ngFor="let post of posts; let i = index">
-      <div>
-        <mat-card-title>
-          <img [src]="post.imgUserPost" alt="Imagen de usuario modificada" class="post-author-image-changed">
-          <div class="post-author-info">
-            <h3>{{post.userPost}} Modificado</h3>
-            <p>{{post.resume}}</p>
-          </div>
-        </mat-card-title>
-      </div>
+  <mat-card class="post" *ngFor="let post of posts; let i = index">
+    <div>
+      <mat-card-title>
+        <img
+          mat-card-avatar
+          [src]="post.imgUserPost"
+          alt="Imagen de usuario modificada"
+          class="post-author-image-changed"
+        />
+        <div class="post-author-info">
+          <h3>{{ post.userPost }}</h3>
+          <p>{{ post.resume }}</p>
+        </div>
+      </mat-card-title>
+    </div>
 
-      <img mat-card-image [src]=post.imgPost alt="Imagen modificada" class="post-product-image">
-      <div>
-        <p>{{post.comment}}</p>
-      <div>
+    <mat-card-actions>
+      <button mat-button>
+        <mat-icon>thumb_up</mat-icon>
+        Me gusta ({{ post.likes }})
+      </button>
+      <button mat-button id="1" (click)="addComment(post.id, i)">
+        <h3>Mensaje</h3>
+      </button>
+    </mat-card-actions>
 
+    <img
+      mat-card-image
+      [src]="post.imgPost"
+      alt="Imagen modificada"
+      class="post-product-image"
+    />
+    <div>
+      <p>{{ post.comment }}</p>
       <div>
-        
-      <div>
+        <div>
+          <div>
+            <div class="comments-section">
+              <h3>Comentarios ({{ post.commentPeople.length }})</h3>
+              <mat-list> </mat-list>
 
-      <div class="comments-section">
-        <h3>Comentarios ({{post.commentPeople.length}})</h3>
-        <mat-list>
-		
-        </mat-list>
+              <button
+                mat-button
+                id="5"
+                color="secondary"
+                (click)="addComment(post.id, i)"
+              >
+                Otro comentario
+              </button>
 
-        <button mat-button id="5" color="secondary" (click)="addComment(post.id, i)">Otro comentario</button>
-
-        <div class="text-comments">
-          <div class="add-comment">
-            <mat-form-field class="comment-input">
-              <textarea matInput placeholder="Texto modificado..." [(ngModel)]="newCommentChanged[i.toString()]"></textarea>
-            </mat-form-field>
+              <div class="text-comments">
+                <div class="add-comment">
+                  <mat-form-field class="comment-input">
+                    <textarea
+                      matInput
+                      placeholder="Texto modificado..."
+                      [(ngModel)]="newCommentChanged[i.toString()]"
+                    ></textarea>
+                  </mat-form-field>
+                </div>
+                <button mat-button id="2" (click)="addComment(post.id, i)" color="primary">
+                  <h3>Comentario</h3>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>  
-  </div>
+      </div>
+    </div>
+  </mat-card>
 </div>
