--- a/src/app/routes/home/home-publications/home-publications.component.html
+++ b/src/app/routes/home/home-publications/home-publications.component.html
@@ -1,19 +1,19 @@
 <div class="posts">
   <mat-card class="post" *ngFor="let post of posts; let i = index">
-    <div>
+    <mat-card-header>
       <mat-card-title>
         <img
           mat-card-avatar
           [src]="post.imgUserPost"
           alt="Imagen de usuario modificada"
-          class="post-author-image-changed"
+          class="post-author-image"
         />
         <div class="post-author-info">
           <h3>{{ post.userPost }}</h3>
           <p>{{ post.resume }}</p>
         </div>
       </mat-card-title>
-    </div>
+    </mat-card-header>
 
     <mat-card-actions>
       <button mat-button>
