Resuelto issue L2 #44 12:06 am

--- a/src/app/routes/home/personal-info/personal-info.component.html
+++ b/src/app/routes/home/personal-info/personal-info.component.html
@@ -2,7 +2,7 @@
   <img mat-card-image src="img.jgp" alt="Prfile">
   <mat-card-content>
     <mat-card-title>Personal Information</mat-card-title>
-    <mat-card-subtitle>Update your personal information</mat-card-subtitle>
+    <mat-card-subtitle><p>StartUp de venta de telas</p></mat-card-subtitle>
     <mat-card-actions>
       <button mat-raised-button color="primary" routerLink="/userProfile">Ver perfil</button>
     </mat-card-actions>
