Resuelto issue L2 #42 29 febrero 12:17 am

--- a/src/app/routes/home/personal-info/personal-info.component.html
+++ b/src/app/routes/home/personal-info/personal-info.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <img mat-card-image src="img.jgp" alt="Prfile">
+  <img mat-card-image src="img.jgp" alt="Foto de perfil">
   <mat-card-content>
     <mat-card-title>Personal Information</mat-card-title>
     <mat-card-subtitle><p>StartUp de venta de telas</p></mat-card-subtitle>
