Resuelto issue L2 #43 29 febrero 12:19 am

--- a/src/app/routes/home/personal-info/personal-info.component.html
+++ b/src/app/routes/home/personal-info/personal-info.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="profile-card">
   <img mat-card-image src="img.jgp" alt="Foto de perfil">
   <mat-card-content>
     <mat-card-title>Personal Information</mat-card-title>
