--- a/src/app/routes/home/personal-info/personal-info.component.html
+++ b/src/app/routes/home/personal-info/personal-info.component.html
@@ -1,5 +1,5 @@
 <mat-card class="profile-card">
-  <img mat-card-image src="img.jgp" alt="Foto de perfil">
+  <img mat-card-image src="assets/imgs/icons/user_unknown.jpg" alt="Foto de perfil">
   <mat-card-content>
     <mat-card-title>Personal Information</mat-card-title>
     <mat-card-subtitle><p>StartUp de venta de telas</p></mat-card-subtitle>
