Resuelto issue L2 #39 #38 febrero 12:41 am

--- a/src/app/routes/home/home-economics-indicators/home-economics-indicators.component.html
+++ b/src/app/routes/home/home-economics-indicators/home-economics-indicators.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-card class=".indicator-card" *ngFor="let indicator of economicIndicators">
+  <mat-card class="indicator-card" *ngFor="let indicator of economicIndicators">
     <mat-card-header>
       <mat-card-title>{{indicator.name}}</mat-card-title>
     </mat-card-header>
