--- a/src/app/routes/home/home-economics-indicators/home-economics-indicators.component.html
+++ b/src/app/routes/home/home-economics-indicators/home-economics-indicators.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="indicators-container">
   <mat-card class="indicator-card" *ngFor="let indicator of economicIndicators">
     <mat-card-header>
       <mat-card-title>{{indicator.name}}</mat-card-title>
