Resuelto issues #26 #23 #24 #29 29 febrero 2:14 am

--- a/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.html
+++ b/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.html
@@ -1,6 +1,19 @@
 <div>
   <select (change)="filtrarPorAnio($event)">
     <option>Selecciona un año</option>
-    <option *ngFor="let anio of anios" value="anio">{{anio}}</option>
+    <option *ngFor="let anio of anios" value="{{anio}}">{{anio}}</option>
   </select>
+  <table>
+    <thead>
+      <tr>
+        <th *ngFor="let column of displayedColumns">{{column}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let economicefficiency of aniosFiltrados">
+        <td>{{economicefficiency.anio}}</td>
+        <td>{{economicefficiency.eficiencia}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
