--- a/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.html
+++ b/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h2>Eficiencia economica</h2>
   <select (change)="filtrarPorAnio($event)">
     <option>Selecciona un año</option>
     <option *ngFor="let anio of anios" value="{{anio}}">{{anio}}</option>
