--- a/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.scss
+++ b/src/app/routes/home/home-economicefficiency/home-economicefficiency.component.scss
@@ -14,11 +14,15 @@ table {
   }
 
   tbody tr td {
-    padding: 10px 15px;
+    padding: 5px 15px;
+  }
+  
+  tbody tr:nth-child(odd) {
     color: white;
+    background-color: rgb(0, 60, 112);
   }
 
-  tbody tr:nth-child(odd) {
-    background-color: rgb(0, 60, 112);
+  tbody tr:nth-child(even) {
+    background-color: rgb(195, 213, 228);
   }
 }
